--- a/1/css/styles.css
+++ b/1/css/styles.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
 }
@@ -30,14 +29,14 @@ body {
   background-color: var(--color-primary);
 }
 
-main {
+.container {
   min-height: 100vh;
   display: flex;
   width: 41.7vw;
   margin: 0 auto;
 }
 
-main > div {
+.container > div {
   flex: 1 1 auto;
   align-self: center;
 }
@@ -47,13 +46,13 @@ strong {
   font-weight: 400;
 }
 
-h1 {
+h1, h2 {
   margin: 0;
   font: inherit;
   font-size: 1.5em;
 }
 
-h1 span {
+h1 span, h2 span {
   color: var(--color-primary);
 }
 
@@ -69,6 +68,13 @@ button {
   font: inherit;
   background-color: transparent;
   border: 1px solid var(--color-primary);
+  transition: color 200ms, box-shadow 200ms;
+  box-shadow: 0 0 0 inset var(--color-primary);
+}
+
+button:hover {
+  color: #1f1d1a;
+  box-shadow: 250px 0 0 inset var(--color-primary);
 }
 
 a {
@@ -76,4 +82,46 @@ a {
   color: var(--color-primary);
   text-decoration: none;
   border-bottom: 2px solid var(--color-primary);
+  transition: border-color 200ms;
 }
+
+a:hover {
+  border-color: transparent;
+}
+
+
+
+
+
+
+
+/* Contact section */
+
+input, textarea {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 24px 0 0;
+  padding: 6px 24px;
+  color: #e3dfd7;
+  font: inherit;
+  background: rgba(255, 255, 255, .05);
+  border: 0;
+  border-bottom: 3px solid #e3dfd7;
+  transition: border-color 150ms;
+  z-index: 1;
+  outline: none;
+}
+
+input:focus, textarea:focus {
+  border-color: var(--color-primary);
+  z-index: 2;
+}
+
+
+
+
+
+
+
+
