--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -9,20 +9,16 @@ html, body {
 
 html {
   font-size: 62.5%;
-  --color-font: #747c7d;
-  --color-primary: #da4852;
-  --color-secondary: #e3e8e8;
-  /* --color-secondary: #e95642; */
-  /* --color-secondary: #e4b03e; */
+  --color-font: #efe9e3;
+  --color-primary: #e8422c;
+  --color-secondary: #171515;
 }
 
 body {
   color: var(--color-font);
   font: normal 700 calc(2rem + .75vw)/1.7 'Source Sans Pro', sans-serif;
   background-color: var(--color-secondary);
-  box-shadow: 0 0 0 30px inset #b6baba;
-  background: var(--color-secondary) url('../images/code.svg') no-repeat 100% 100%;
-  background-size: 858px 480px;
+  box-shadow: 0 30px 0 0 inset #e8422c;
 }
 
 /* Main Structure */
@@ -62,27 +58,18 @@ button {
   display: inline-block;
   margin: 24px 32px 0 0;
   padding: 6px 24px 6px 72px;
-  color: var(--color-primary);
+  color: var(--color-font);
   font: inherit;
   background: transparent url('../images/message.svg') no-repeat 24px 50%;
   background-size: 30px 30px;
-  border: 3px solid var(--color-primary);
+  border: 4px solid var(--color-primary);
   transition: color 200ms, box-shadow 200ms;
-  box-shadow: 0 0 0 inset rgba(218, 72, 82, .2);
-}
-
-button span {
-  display: inline-block;
-}
-
-button:hover {
-  box-shadow: 350px 0 0 inset rgba(218, 72, 82, .2);
 }
 
 a {
   display: inline-block;
   padding-left: 48px;
-  color: var(--color-primary);
+  color: var(--color-font);
   text-decoration: none;
   background: transparent url('../images/linkedin.svg') no-repeat 0 50%;
   background-size: 30px 30px;
@@ -90,7 +77,7 @@ a {
 
 a span {
   display: inline-block;
-  border-bottom: 3px solid var(--color-primary);
+  border-bottom: 4px solid var(--color-primary);
   transition: border-color 200ms;
 }
 
