--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -17,7 +17,8 @@ html {
 body {
   color: var(--color-font);
   font: normal 700 calc(2rem + .75vw)/1.7 'Source Sans Pro', sans-serif;
-  background-color: var(--color-secondary);
+  background: var(--color-secondary) url('../images/funky.svg') 0 0 no-repeat;
+  background-size: cover;
   box-shadow: 0 30px 0 0 inset #e8422c;
 }
 
@@ -60,10 +61,14 @@ button {
   padding: 6px 24px 6px 72px;
   color: var(--color-font);
   font: inherit;
-  background: transparent url('../images/message.svg') no-repeat 24px 50%;
+  background: transparent url('../images/message.svg') 24px 50% no-repeat;
   background-size: 30px 30px;
   border: 4px solid var(--color-primary);
-  transition: color 200ms, box-shadow 200ms;
+  transition: color 200ms, border-color 200ms;
+}
+
+button:hover {
+  border-color: transparent;
 }
 
 a {
@@ -71,7 +76,7 @@ a {
   padding-left: 48px;
   color: var(--color-font);
   text-decoration: none;
-  background: transparent url('../images/linkedin.svg') no-repeat 0 50%;
+  background: transparent url('../images/linkedin.svg') 0 50% no-repeat;
   background-size: 30px 30px;
 }
 
