--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -17,9 +17,9 @@ html {
 body {
   color: var(--color-font);
   font: normal 700 calc(2rem + .75vw)/1.7 'Source Sans Pro', sans-serif;
-  background: var(--color-secondary) url('../images/funky.svg') 0 0 no-repeat;
+  background: var(--color-secondary) url('../images/funky.svg') bottom right no-repeat;
   background-size: cover;
-  box-shadow: 0 30px 0 0 inset #e8422c;
+  box-shadow: 0 30px 0 0 inset var(--color-primary);
 }
 
 /* Main Structure */
@@ -35,6 +35,7 @@ body {
 .container > div {
   flex: 1 1 auto;
   align-self: center;
+  background-image: radial-gradient(var(--color-secondary) 0%, transparent 70%);
 }
 
 /* Content */
