--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -17,9 +17,9 @@ html {
 body {
   color: var(--color-font);
   font: normal 700 calc(2rem + .75vw)/1.7 'Source Sans Pro', sans-serif;
-  background: var(--color-secondary) url('../images/funky.svg') bottom right no-repeat;
-  background-size: cover;
-  box-shadow: 0 30px 0 0 inset var(--color-primary);
+  background: var(--color-secondary) url('../images/funky.svg') 100% 50% no-repeat;
+  /* background-size: cover; */
+  box-shadow: 0 30px 0 0 inset var(--color-primary), 0 -30px 0 0 inset var(--color-primary);
 }
 
 /* Main Structure */
@@ -93,4 +93,18 @@ a:hover {
 
 a:hover span {
   border-color: transparent;
+}
+
+/* Form */
+
+input,
+textarea {
+  display: block;
+  width: 70%;
+  margin: 24px 32px 0 0;
+  padding: 6px 24px;
+  color: var(--color-font);
+  font: inherit;
+  background-color: transparent;
+  border: 4px solid var(--color-primary);
 }
