--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -16,9 +16,8 @@ html {
 
 body {
   color: var(--color-font);
-  font: normal 700 calc(2rem + .75vw)/1.7 'Source Sans Pro', sans-serif;
-  background: var(--color-secondary) url('../images/funky.svg') 100% 50% no-repeat;
-  /* background-size: cover; */
+  font: normal 700 3.44rem/1.7 'Source Sans Pro', sans-serif;
+  background: var(--color-secondary) url('../images/grid.svg') 100% 50% no-repeat;
   box-shadow: 0 30px 0 0 inset var(--color-primary), 0 -30px 0 0 inset var(--color-primary);
 }
 
@@ -27,7 +26,7 @@ body {
 .container {
   min-height: 100vh;
   display: flex;
-  width: calc(51.5vw + 20vw);
+  width: calc(28.7em + 20vw);
   margin: 0 auto;
   padding-right: 20vw;
 }
@@ -48,12 +47,24 @@ h1 {
   line-height: normal;
 }
 
-h1 span {
+h2 {
+  margin: 0;
+  font: inherit;
+  font-size: 1.4em;
+  font-weight: 900;
+  line-height: normal;
+}
+
+h1 span, h2 span {
   color: var(--color-primary);
 }
 
 p {
   margin: 1em 0;
+}
+
+.contact p {
+  font-size: .8em;
 }
 
 button {
@@ -105,6 +116,11 @@ textarea {
   padding: 6px 24px;
   color: var(--color-font);
   font: inherit;
+  font-size: .8em;
   background-color: transparent;
   border: 4px solid var(--color-primary);
+}
+
+textarea {
+  height: calc((1em * 1.7 * 3) + 8px + 12px); /* font-size, line-height, rows, border x2, padding x2 */
 }
