--- a/2/css/styles.css
+++ b/2/css/styles.css
@@ -18,7 +18,8 @@ body {
   color: var(--color-font);
   font: normal 700 3.44rem/1.7 'Source Sans Pro', sans-serif;
   background: var(--color-secondary) url('../images/grid.svg') 100% 50% no-repeat;
-  box-shadow: 0 30px 0 0 inset var(--color-primary), 0 -30px 0 0 inset var(--color-primary);
+  background-size: cover;
+  box-shadow: 0 30px 0 0 inset var(--color-primary);
 }
 
 /* Main Structure */
