--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,15 +2,10 @@
   box-sizing: border-box;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
 html {
   font-size: 62.5%;
-  --color-font: #efe9e3;
-  --color-primary: #e8422c;
+  --color-font: hsl(30deg 27% 91%);
+  --color-primary: hsl(7deg 80% 54%);
   --color-secondary: #171515;
 }
 
@@ -18,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  margin: 0;
   color: var(--color-font);
   font: normal 700 3.5rem/1.7 'Source Sans Pro', sans-serif;
   background-color: var(--color-secondary);
@@ -57,6 +53,10 @@ a {
   transition: border-bottom-color 150ms;
 }
 
-a:hover {
-  border-bottom-color: transparent;
+/* Some devices (mostly Samsung) have their touchscreen set up as a trackpad
+   (which implies hover capability), and need an additional (pointer) check. */
+@media (hover: hover) and (pointer: fine) {
+  a:hover {
+    border-bottom-color: transparent;
+  }
 }
