Add a my-picture component

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -86,22 +86,8 @@ theme-switch {
   }
 }
 
-.🦄 {
-  width: 15rem;
-  height: 15rem;
+my-picture {
   margin: 0 auto;
-  padding: 0.7rem;
-  border: 0.3rem solid var(--color-highlight);
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.🦄 img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  border-radius: 50%;
 }
 
 h1 {
