--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,7 +92,7 @@ my-picture {
 }
 
 h1 {
-  margin: 2.4rem 0 0;
+  margin: 2.4rem 0 3.2rem;
   font: inherit;
   font-size: 1.6em;
   font-weight: var(--font-weight-bold);
@@ -104,7 +104,7 @@ h1 span {
 }
 
 p {
-  margin: 3.2rem 0 0;
+  margin: 2.4rem 0 0;
 }
 
 @media (min-width: 500px) {
