--- a/src/public/assets/css/styles.css
+++ b/src/public/assets/css/styles.css
@@ -105,7 +105,7 @@ a .link-effect {
   text-decoration: underline;
   text-decoration-color: var(--color-highlight);
   text-decoration-thickness: 0.2rem;
-  text-underline-offset: 0.2rem;
+  text-underline-offset: 0.3rem;
   box-shadow: inset 0 0 hsla(7deg 80% 54% / 15%);
   transition:
     color var(--hover-transition-duration),
@@ -210,37 +210,6 @@ a:hover:focus-visible .link-effect {
   background-color: var(--color-shade-10);
 }
 
-/* Post preview */
-.post-preview {
-  margin-top: 5.6rem;
-}
-
-.post-preview h2 {
-  margin: 0 0 0.2rem;
-  line-height: 1.2;
-  font-size: 3.4rem;
-}
-
-.post-preview h2 a {
-  display: inline-block;
-  text-decoration-thickness: 0.3rem;
-}
-
-.post-preview time {
-  display: inline-block;
-  color: var(--color-shade-55);
-
-  /* font-variant:all-small-caps is bugged in iOS (spacing issue) */
-  font-size: 0.8em;
-  text-transform: uppercase;
-}
-
-.post-preview p {
-  margin: 0.8rem 0 0.4rem;
-  font-size: 2.2rem;
-  font-family: 'Source Serif 4', serif;
-}
-
 /* Profile picture */
 .profile-picture {
   width: 12rem;
@@ -310,6 +279,149 @@ a:hover:focus-visible .link-effect {
   }
 }
 
+/* Formatted content */
+.formatted-content {
+  font-size: 2.2rem;
+  font-family: 'Source Serif 4', serif;
+}
+
+.formatted-content ol,
+.formatted-content ul,
+.formatted-content p {
+  margin: 2.2rem 0 0;
+}
+
+.formatted-content h2 {
+  margin: 4.8rem 0 -1.2rem;
+  font-size: 2.8rem;
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+.formatted-content h3 {
+  margin: 3.2rem 0 -1.6rem;
+  font-size: 2.2rem;
+  font-family: 'Source Sans 3', sans-serif;
+}
+
+/* Regular links */
+.formatted-content a:not(.anchor) {
+  font-weight: 600;
+}
+
+.formatted-content a.anchor {
+  margin-left: 0.2rem;
+  padding: 0 0.6rem;
+  color: var(--color-shade-40);
+  font-size: 0.8em;
+  text-decoration: none;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .formatted-content a.anchor:hover {
+    color: var(--color-highlight);
+  }
+}
+
+.formatted-content blockquote {
+  margin: 3.2rem 0;
+  padding: 2.4rem 3.2rem;
+  font-size: 2.6rem;
+  text-align: center;
+  background-color: var(--color-shade-7);
+  border-radius: 0.4rem;
+}
+
+.formatted-content pre {
+  margin: 3.2rem 0;
+  padding: 1.6rem 2.4rem;
+  line-height: 1.7;
+  font-size: 1.5rem;
+  background-color: var(--color-shade-7);
+  border-radius: 0.4rem;
+  white-space: pre;
+  overflow: auto;
+}
+
+.formatted-content pre code {
+  line-height: inherit;
+  font-size: inherit;
+}
+
+.formatted-content code {
+  font-family: Menlo, monospace;
+  text-shadow: 0.1rem 0.1rem 0 var(--color-background);
+  word-spacing: normal;
+  word-break: normal;
+  tab-size: 2;
+  hyphens: none;
+}
+
+/* Inline code */
+.formatted-content code:not(pre code) {
+  display: inline-block;
+  padding: 0 0.6rem;
+  font-size: 1.7rem;
+  background-color: var(--color-shade-10);
+  border-radius: 0.4rem;
+}
+
+.formatted-content code::selection,
+.formatted-content code *::selection {
+  text-shadow: none !important;
+}
+
+.formatted-content blockquote p:first-of-type {
+  margin-top: 0;
+}
+
+.formatted-content blockquote p:last-of-type {
+  margin-bottom: 0;
+}
+
+.formatted-content hr {
+  position: relative;
+  margin: 4rem 0 5.6rem;
+  color: currentcolor;
+  text-align: center;
+  border: none;
+}
+
+.formatted-content hr::after {
+  content: '...';
+  display: inline-block;
+  font-size: 3.2rem;
+  letter-spacing: 1.6rem;
+}
+
+/* Post preview */
+.post-preview {
+  margin-top: 5.6rem;
+}
+
+.post-preview h2 {
+  margin: 0 0 0.2rem;
+  line-height: 1.2;
+  font-size: 3.4rem;
+}
+
+.post-preview h2 a {
+  display: inline-block;
+  text-decoration-thickness: 0.3rem;
+}
+
+.post-preview time {
+  display: inline-block;
+  color: var(--color-shade-55);
+
+  /* font-variant:all-small-caps is bugged in iOS (spacing issue) */
+  font-size: 0.8em;
+  text-transform: uppercase;
+}
+
+.post-preview p {
+  margin: 0.8rem 0 0.4rem !important;
+}
+
 /* Page: homepage */
 
 .page-home {
@@ -354,113 +466,6 @@ a:hover:focus-visible .link-effect {
 .page-post .datetime {
   margin: 1.4rem 0 -1rem;
   color: var(--color-shade-55);
-}
-
-.post-content {
-  font-size: 2.2rem;
-  font-family: 'Source Serif 4', serif;
-}
-
-.post-content ol,
-.post-content ul,
-.post-content p {
-  margin: 2.2rem 0 0;
-}
-
-.post-content blockquote,
-.post-content pre {
-  margin: 2.4rem 0;
-  padding: 1.6rem 2.4rem;
-  background-color: var(--color-shade-7);
-  border-radius: 0.4rem;
-}
-
-.post-content h2 {
-  margin: 4.8rem 0 -1.2rem;
-  font-size: 2.8rem;
-  font-family: 'Source Sans 3', sans-serif;
-}
-
-.post-content h3 {
-  margin: 3.2rem 0 -1.6rem;
-  font-size: 2.2rem;
-  font-family: 'Source Sans 3', sans-serif;
-}
-
-/* Regular links */
-.post-content a:not(.anchor) {
-  font-weight: 600;
-}
-
-.post-content a.anchor {
-  margin-left: 0.2rem;
-  padding: 0 0.6rem;
-  color: var(--color-shade-40);
-  font-size: 0.8em;
-  text-decoration: none;
-}
-
-@media (hover: hover) and (pointer: fine) {
-  .post-content a.anchor:hover {
-    color: var(--color-highlight);
-  }
-}
-
-.post-content pre {
-  line-height: 1.7;
-  font-size: 1.5rem;
-  white-space: pre;
-  overflow: auto;
-}
-
-.post-content pre code {
-  line-height: inherit;
-  font-size: inherit;
-}
-
-.post-content code {
-  font-family: Menlo, monospace;
-  text-shadow: 0.1rem 0.1rem 0 var(--color-background);
-  word-spacing: normal;
-  word-break: normal;
-  tab-size: 2;
-  hyphens: none;
-}
-
-/* Inline code */
-.post-content code:not(pre code) {
-  display: inline-block;
-  padding: 0 0.6rem;
-  font-size: 1.7rem;
-  background-color: var(--color-shade-10);
-  border-radius: 0.4rem;
-}
-
-.post-content code::selection,
-.post-content code *::selection {
-  text-shadow: none !important;
-}
-
-.post-content blockquote p:first-of-type {
-  margin-top: 0;
-}
-
-.post-content blockquote p:last-of-type {
-  margin-bottom: 0;
-}
-
-.post-content hr {
-  position: relative;
-  margin: 4rem 0 5.6rem;
-  text-align: center;
-  border: none;
-}
-
-.post-content hr::after {
-  content: '...';
-  display: inline-block;
-  font-size: 3.2rem;
-  letter-spacing: 1.6rem;
 }
 
 .page-post .tag-list {
